--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
 								<li class="address">
 									<i class="icon flaticon-placeholder"></i>
 									<h6>Address:</h6>
-									<p>2A0, Queenstown St, USA.</p>
+									<p>36A Dandelion Close, Northampton.</p>
 								</li>
 								<li class="address">
 									<i class="icon flaticon-multimedia"></i>
 									<h6>Mail us:</h6>
-									<p>supporthere@mail.com</p>
+									<p>abbasiniaz@outlook.com</p>
 								</li>
-								<li class="quotes"><a href="#">GET A QUOTES</a></li>
 							</ul>
 						</div> <!-- /.address-wrapper -->
 					</div> <!-- /.container -->
@@ -185,8 +184,8 @@
 							<div class="text">
 								<div class="theme-title-one">
 									<h2>About Our Company</h2>
-									<p>A tale of a fateful trip that started from this tropic port aboard this tiny ship today still wanted by the government they survive as soldiers of fortune to a deluxe apartment in the sky moving on up to the east side a family.</p>
-									<p>The government they survive as soldiers of fortune baby if you've ever wondered the east side to a deluxe apartment.</p>
+									<p>we specialize in delivering innovative IT solutions and strategic business consulting services to help organizations achieve their goals in a fast-changing digital landscape.</p>
+									<p>Our expertise lies in the seamless integration of technology and business strategy, ensuring that our clients stay ahead of the curve and achieve sustainable growth.</p>
 								</div> <!-- /.theme-title-one -->
 								<ul class="mission-goal clearfix">
 									<li>
@@ -218,11 +217,9 @@
 				<div class="opacity">
 					<div class="container">
 						<h2>We provide high quality services &amp; innovative solutions for the realiable growth</h2>
-						<a href="#" class="theme-button-one">GET A QUOTES</a>
 					</div> <!-- /.container -->
 				</div> <!-- /.opacity -->
 			</div> <!-- /.feature-banner -->
-
 
 			<!-- 
 			=============================================
@@ -242,36 +239,6 @@
 									<div class="img-box"><img src="images/home/3.jpg" alt=""></div>
 									<div class="text">
 										<h5><a href="service-details.html">Business Services</a></h5>
-										<p>The tiny ship today stiller</p>
-										<a href="service-details.html" class="read-more">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-									</div> <!-- /.text -->
-								</div> <!-- /.single-service -->
-							</div> <!-- /.col- -->
-							<div class="col-xl-4 col-md-6 col-12">
-								<div class="single-service">
-									<div class="img-box"><img src="images/home/4.jpg" alt=""></div>
-									<div class="text">
-										<h5><a href="service-details.html">Consumer Product</a></h5>
-										<p>The tiny ship today stiller</p>
-										<a href="service-details.html" class="read-more">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-									</div> <!-- /.text -->
-								</div> <!-- /.single-service -->
-							</div> <!-- /.col- -->
-							<div class="col-xl-4 col-md-6 col-12">
-								<div class="single-service">
-									<div class="img-box"><img src="images/home/5.jpg" alt=""></div>
-									<div class="text">
-										<h5><a href="service-details.html">Financial Services</a></h5>
-										<p>The tiny ship today stiller</p>
-										<a href="service-details.html" class="read-more">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-									</div> <!-- /.text -->
-								</div> <!-- /.single-service -->
-							</div> <!-- /.col- -->
-							<div class="col-xl-4 col-md-6 col-12">
-								<div class="single-service">
-									<div class="img-box"><img src="images/home/6.jpg" alt=""></div>
-									<div class="text">
-										<h5><a href="service-details.html">Travel and Aviation</a></h5>
 										<p>The tiny ship today stiller</p>
 										<a href="service-details.html" class="read-more">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a>
 									</div> <!-- /.text -->
@@ -300,154 +267,11 @@
 						</div> <!-- /.row -->
 					</div> <!-- /.wrapper -->
 					<div class="contact-text">
-						<h4>You can also send us an email and we’ll get in touch shortly, or Call us</h4>
-						<h5><a href="#">info@support.com</a>  (or)  <a href="#">+1 234 6780 900</a></h5>
+						<h4>You can also send us an email and we’ll get in touch shortly</h4>
+						<h5>abbasiniaz@outlook.com</h5>
 					</div>
 				</div> <!-- /.container -->
 			</div> <!-- /.service-style-one -->
-
-
-			<!--
-			=====================================================
-				Testimonial Slider
-			=====================================================
-			-->
-			<div class="testimonial-section section-spacing">
-				<div class="overlay">
-					<div class="container">
-						<div class="wrapper">
-							<div class="bg">
-								<div class="testimonial-slider">
-									<div class="item">
-										<p>“ A tale of a fateful trip that started from this tropic port aboard this tiny ship today still wanted by the government they survive as soldiers of fortune to a deluxe apartment in the sky moving on up to the east side a family. ”</p>
-										<div class="name">
-											<h6>Shawn Michael</h6>
-											<span>Founder, Mnc Inc.</span>
-										</div> <!-- /.name -->
-									</div> <!-- /.item -->
-									<div class="item">
-										<p>“ A tale of a fateful trip that started from this tropic port aboard this tiny ship today still wanted by the government they survive as soldiers of fortune to a deluxe apartment in the sky moving on up to the east side a family. ”</p>
-										<div class="name">
-											<h6>Rashed Ka.</h6>
-											<span>Founder, Mnc Inc.</span>
-										</div> <!-- /.name -->
-									</div> <!-- /.item -->
-									<div class="item">
-										<p>“ A tale of a fateful trip that started from this tropic port aboard this tiny ship today still wanted by the government they survive as soldiers of fortune to a deluxe apartment in the sky moving on up to the east side a family. ”</p>
-										<div class="name">
-											<h6>Mahfuz Riad</h6>
-											<span>Founder, Mnc Inc.</span>
-										</div> <!-- /.name -->
-									</div> <!-- /.item -->
-								</div> <!-- /.testimonial-slider -->
-							</div> <!-- /.bg -->
-						</div> <!-- /.wrapper -->
-					</div> <!-- /.container -->
-				</div> <!-- /.overlay -->
-			</div> <!-- /.testimonial-section -->
-
-
-			<!--
-			=====================================================
-				Our Team
-			=====================================================
-			-->
-			<div class="our-team section-spacing">
-				<div class="container">
-					<div class="theme-title-one">
-						<h2>Our TEAM</h2>
-						<p>A tale of a fateful trip that started from this tropic port aboard this tiny ship today stillers</p>
-					</div> <!-- /.theme-title-one -->
-					<div class="wrapper">
-						<div class="row">
-							<div class="col-lg-3 col-sm-6 col-12">
-								<div class="team-member">
-									<div class="image-box">
-										<img src="images/team/1.jpg" alt="">
-										<div class="overlay">
-											<div class="hover-content">
-												<ul>
-													<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-												</ul>
-												<p>The government they survive as soldiers of fortune.</p>
-											</div> <!-- /.hover-content -->
-										</div> <!-- /.overlay -->
-									</div> <!-- /.image-box -->
-									<div class="text">
-										<h6>Richards Mills</h6>
-										<span>Sales Consultant</span>
-									</div> <!-- /.text -->
-								</div> <!-- /.team-member -->
-							</div> <!-- /.col- -->
-							<div class="col-lg-3 col-sm-6 col-12">
-								<div class="team-member">
-									<div class="image-box">
-										<img src="images/team/2.jpg" alt="">
-										<div class="overlay">
-											<div class="hover-content">
-												<ul>
-													<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-												</ul>
-												<p>The government they survive as soldiers of fortune.</p>
-											</div> <!-- /.hover-content -->
-										</div> <!-- /.overlay -->
-									</div> <!-- /.image-box -->
-									<div class="text">
-										<h6>Mike Hussey</h6>
-										<span>Founder, CEO</span>
-									</div> <!-- /.text -->
-								</div> <!-- /.team-member -->
-							</div> <!-- /.col- -->
-							<div class="col-lg-3 col-sm-6 col-12">
-								<div class="team-member">
-									<div class="image-box">
-										<img src="images/team/3.jpg" alt="">
-										<div class="overlay">
-											<div class="hover-content">
-												<ul>
-													<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-												</ul>
-												<p>The government they survive as soldiers of fortune.</p>
-											</div> <!-- /.hover-content -->
-										</div> <!-- /.overlay -->
-									</div> <!-- /.image-box -->
-									<div class="text">
-										<h6>Jenilia D’sosa</h6>
-										<span>Marketing Lead</span>
-									</div> <!-- /.text -->
-								</div> <!-- /.team-member -->
-							</div> <!-- /.col- -->
-							<div class="col-lg-3 col-sm-6 col-12">
-								<div class="team-member">
-									<div class="image-box">
-										<img src="images/team/4.jpg" alt="">
-										<div class="overlay">
-											<div class="hover-content">
-												<ul>
-													<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-													<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-												</ul>
-												<p>The government they survive as soldiers of fortune.</p>
-											</div> <!-- /.hover-content -->
-										</div> <!-- /.overlay -->
-									</div> <!-- /.image-box -->
-									<div class="text">
-										<h6>David Warner</h6>
-										<span>SEO Analyst</span>
-									</div> <!-- /.text -->
-								</div> <!-- /.team-member -->
-							</div> <!-- /.col- -->
-						</div> <!-- /.row -->
-					</div> <!-- /.wrapper -->
-				</div> <!-- /.container -->
-			</div> <!-- /.our-team -->
 
 
 			<!--
@@ -465,101 +289,33 @@
 							<div class="row">
 								<div class="col-md-3 col-6">
 									<div class="single-counter-box">
-				        				<div class="number"><span class="timer" data-from="0" data-to="30" data-speed="1200" data-refresh-interval="5">0</span>+</div>
+				        				<div class="number"><span class="timer" data-from="0" data-to="2" data-speed="1200" data-refresh-interval="5">0</span>+</div>
 				        				<p>Years of Excellence</p>
 				        			</div> <!-- /.single-counter-box -->
 								</div>  <!-- /.col- -->
 								<div class="col-md-3 col-6">
 									<div class="single-counter-box">
-				        				<div class="number"><span class="timer" data-from="0" data-to="100" data-speed="1200" data-refresh-interval="5">0</span>%</div>
+				        				<div class="number"><span class="timer" data-from="0" data-to="50" data-speed="1200" data-refresh-interval="5">0</span>%</div>
 				        				<p>Client Satisfaction</p>
 				        			</div> <!-- /.single-counter-box -->
 								</div>  <!-- /.col- -->
 								<div class="col-md-3 col-6">
 									<div class="single-counter-box">
-				        				<div class="number"><span class="timer" data-from="0" data-to="53" data-speed="1200" data-refresh-interval="5">0</span>k</div>
+				        				<div class="number"><span class="timer" data-from="0" data-to="50" data-speed="1200" data-refresh-interval="5">0</span></div>
 				        				<p>Cases Completed</p>
 				        			</div> <!-- /.single-counter-box -->
 								</div>  <!-- /.col- -->
 								<div class="col-md-3 col-6">
 									<div class="single-counter-box">
-				        				<div class="number"><span class="timer" data-from="0" data-to="24" data-speed="1200" data-refresh-interval="5">0</span></div>
+				        				<div class="number"><span class="timer" data-from="0" data-to="10" data-speed="1200" data-refresh-interval="5">0</span></div>
 				        				<p>Consultants</p>
 				        			</div> <!-- /.single-counter-box -->
 								</div>  <!-- /.col- -->
 							</div> <!-- /.row -->
 						</div> <!-- /.cunter-wrapper -->
-						<a href="#" class="theme-button-one">VIEW CASE STUDIES</a>
 					</div> <!-- /.bg -->
 				</div> <!-- /.container -->
 			</div> <!-- /.theme-counter -->
-
-
-			<!--
-			=====================================================
-				Free Consultation
-			=====================================================
-			-->
-			<div class="consultation-form section-spacing">
-				<div class="container">
-					<div class="theme-title-one">
-						<h2>FREE CONSULTATION</h2>
-						<p>A tale of a fateful trip that started from this tropic port aboard this tiny ship today stillers</p>
-					</div> <!-- /.theme-title-one -->
-					<div class="clearfix main-content no-gutters row">
-						<div class="col-xl-6 col-lg-5 col-12"><div class="img-box"></div></div>
-						<div class="col-xl-6 col-lg-7 col-12">
-							<div class="form-wrapper">
-								<form action="#" class="theme-form-one">
-									<div class="row">
-										<div class="col-md-6"><input type="text" placeholder="Name *"></div>
-										<div class="col-md-6"><input type="text" placeholder="Phone *"></div>
-										<div class="col-md-6"><input type="email" placeholder="Email *"></div>
-										<div class="col-md-6">
-											<select class="form-control" id="exampleSelect1">
-										      <option>Service you’re looking for?</option>
-										      <option>Business Services</option>
-										      <option>Consumer Product</option>
-										      <option>Financial Services</option>
-										      <option>Software Research</option>
-										    </select>
-										</div>
-										<div class="col-12"><textarea placeholder="Message"></textarea></div>
-									</div> <!-- /.row -->
-									<button class="theme-button-one">GET A QUOTES</button>
-								</form>
-							</div> <!-- /.form-wrapper -->
-						</div> <!-- /.col- -->
-					</div> <!-- /.main-content -->
-				</div> <!-- /.container -->
-			</div> <!-- /.consultation-form -->
-
-
-
-			<!--
-			=====================================================
-				Partner Slider
-			=====================================================
-			-->
-			<div class="partner-section bg-color">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-3 col-sm-4 col-12">
-							<h6>OUR <br>PARTNERS</h6>
-						</div>
-						<div class="col-md-9 col-sm-8 col-12">
-							<div class="partner-slider">
-								<div class="item"><img src="images/logo/p-1.png" alt=""></div>
-								<div class="item"><img src="images/logo/p-2.png" alt=""></div>
-								<div class="item"><img src="images/logo/p-3.png" alt=""></div>
-								<div class="item"><img src="images/logo/p-4.png" alt=""></div>
-								<div class="item"><img src="images/logo/p-5.png" alt=""></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div> <!-- /.partner-section -->
-
 
 			<!--
 			=====================================================
@@ -572,8 +328,8 @@
 						<div class="row">
 							<div class="col-xl-3 col-lg-4 col-sm-6 about-widget">
 								<h6 class="title">About OUR Consulting</h6>
-								<p>That started from this tropic port aboard this tiny ship today still want by theam government they survive on up to thetre east side to a deluxe as soldiers of artics fortune.</p>
-								<div class="queries"><i class="flaticon-phone-call"></i> Any Queries : <a href="#">(+1) 234 567 900</a></div>
+								<p>Founded in 2012, SNT CONSULTANCY LTD has grown into a trusted partner for businesses across diverse industries. Our team of experts comprises seasoned professionals with a deep understanding of both IT infrastructure and business processes.</p>
+								<div class="queries"><i class="flaticon-phone-call"></i> Any Queries : abbasiniaz@outlook.com</div>
 							</div> <!-- /.about-widget -->
 							<div class="col-xl-4 col-lg-3 col-sm-6 footer-recent-post">
 								<h6 class="title">RECENT POSTS</h6>
@@ -599,27 +355,17 @@
 								<ul>
 									<li><a href="#">Travel and Aviation</a></li>
 									<li><a href="#">Business Services</a></li>
-									<li><a href="#">Consumer Products</a></li>
-									<li><a href="#">Financial Services</a></li>
 									<li><a href="#">Software Research</a></li>
-									<li><a href="#">Quality Resourcing</a></li>
 								</ul>
 							</div> <!-- /.footer-list -->
-							<div class="col-xl-3 col-lg-2 col-sm-6 footer-newsletter">
-								<h6 class="title">NEWSLETTER</h6>
-								<form action="#">
-									<input type="text" placeholder="Name *">
-									<input type="email" placeholder="Email *">
-									<button class="theme-button-one">SUBSCRIBE</button>
-								</form>
-							</div>
+							
 						</div> <!-- /.row -->
 					</div> <!-- /.container -->
 				</div> <!-- /.top-footer -->
 				<div class="bottom-footer">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6 col-12"><p>&copy; Copyrights 2018. All Rights Reserved.</p></div>
+							<div class="col-md-6 col-12"><p>&copy; Copyrights 2024. All Rights Reserved.</p></div>
 							<div class="col-md-6 col-12">
 								<ul>
 									<li><a href="about.html">About</a></li>
