Add Images to index

--- a/contact.html
+++ b/contact.html
@@ -236,7 +236,7 @@
 								<ul>
 									<li><a href="#">Travel and Aviation</a></li>
 									<li><a href="#">Business Services</a></li>
-									<li><a href="#">Software Research</a></li>
+									<li><a Href="#">Software Research</a></li>
 								</ul>
 							</div> <!-- /.footer-list -->
 							
